--- a/App.config
+++ b/App.config
@@ -33,7 +33,7 @@
                 <value>True</value>
             </setting>
             <setting name="FontStyle" serializeAs="String">
-                <value>Microsoft Sans Serif, 11.25pt</value>
+                <value>Segoe UI, 10pt</value>
             </setting>
             <setting name="BackPicturePath" serializeAs="String">
                 <value />
@@ -42,7 +42,7 @@
                 <value>False</value>
             </setting>
             <setting name="BigFontStyle" serializeAs="String">
-                <value>Microsoft Sans Serif, 14pt</value>
+                <value>Segoe UI, 13pt, style=Bold</value>
             </setting>
             <setting name="ResignAPKs" serializeAs="String">
                 <value>False</value>
