refactor(animation): update animation helper and progress bar styles
- Rename control parameter to form in FadeAsync method for clarity
- Replace hardcoded ProgressBarStyle with ProgressStyle enum
- Add AnimationHelper and ResponsiveHelper to project file
- Fix font style declaration in SettingsManager

--- a/AndroidSideloader.csproj
+++ b/AndroidSideloader.csproj
@@ -181,6 +181,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ADB.cs" />
+    <Compile Include="AnimationHelper.cs" />
+    <Compile Include="ResponsiveHelper.cs" />
     <Compile Include="RoundButton.cs">
       <SubType>Component</SubType>
     </Compile>
